--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <div class="pull-right">
+        <% if user_signed_in? %>
+          <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
+        <% end %>
+
+      </div>
+
+
+      <%= yield %>
+    </div>
   </body>
 </html>
